Improve tab complete algorithm in CommandParent